# astropipeline

./: .gitignore  LAB_TECHNICIAN_README.md  Makefile  README.md  environment_template.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start.py  test_enhanced_agents.py  test_experimenter_with_graph.py  test_lab_technician.py  test_pipeline_continuation.py  test_real_ai.py  test_revision_loop.py
astroagent/: __init__.py  pyproject.toml  quick_test.py  requirements.txt
astroagent/agents/: __init__.py  common.py  enhanced_paper_generator.py  experiment_designer.py  experimenter.py  hypothesis_maker.py  lab_technician.py  peer_reviewer.py  reporter.py  reviewer.py
astroagent/config/: agents.yaml  datasources.yaml  orchestration.yaml
astroagent/orchestration/: __init__.py  continuous_pipeline.py  graph.py  registry.py  tools.py
astroagent/services/: __init__.py  literature.py  search_ads.py
astroagent/templates/: experiment_plan_template.md  idea_template.md  interactive_paper_template.html  paper_template.md  results_template.md  reviewer_report_template.md
astroagent/tests/: test_services.py
data/registry/: ideas_register.csv.duplicate_backup  project_index.csv.backup  project_index.csv.corrupted_backup
projects/Preparing/01198B77A5A34EACB5972741F7__mock-approved-idea/: idea.md
projects/Preparing/01198B77A5A34EACB5972741F7__mock-approved-idea/notebooks/: 01_data_exploration.ipynb
projects/Preparing/01198B77A5A34EACB5972741F7__mock-approved-idea/scripts/: fetch_data.py
projects/Preparing/01198BF2191375F9295E4F4699__neutron-star-mergers-as-main-source-of-galactic-r-/: idea.md
projects/Preparing/01198BF2191375F9295E4F4699__neutron-star-mergers-as-main-source-of-galactic-r-/notebooks/: 01_data_exploration.ipynb
projects/Preparing/01198BF2191375F9295E4F4699__neutron-star-mergers-as-main-source-of-galactic-r-/scripts/: fetch_data.py
projects/Preparing/01198BF219A7B50F0A206A492F__dark-matter-distribution-influences-spatial-variat/: idea.md
projects/Preparing/01198BF219A7B50F0A206A492F__dark-matter-distribution-influences-spatial-variat/notebooks/: 01_data_exploration.ipynb
projects/Preparing/01198BF219A7B50F0A206A492F__dark-matter-distribution-influences-spatial-variat/scripts/: fetch_data.py
projects/Preparing/01198BF2204C6DC7F71BD94BE0__dark-matter-distribution-as-a-key-to-understanding/: idea.md
projects/Preparing/01198BF2204C6DC7F71BD94BE0__dark-matter-distribution-as-a-key-to-understanding/notebooks/: 01_data_exploration.ipynb
projects/Preparing/01198BF2204C6DC7F71BD94BE0__dark-matter-distribution-as-a-key-to-understanding/scripts/: fetch_data.py
projects/Preparing/01198BF2265723B607DFF443D2__probing-stellar-evolution-using-exoplanet-induced-/: idea.md
projects/Preparing/01198BF2265723B607DFF443D2__probing-stellar-evolution-using-exoplanet-induced-/notebooks/: 01_data_exploration.ipynb
projects/Preparing/01198BF2265723B607DFF443D2__probing-stellar-evolution-using-exoplanet-induced-/scripts/: fetch_data.py
projects/Preparing/01198BF2269863CAA6D5444080__stellar-oscillations-as-proxies-for-stellar-age/: idea.md
projects/Preparing/01198BF2269863CAA6D5444080__stellar-oscillations-as-proxies-for-stellar-age/notebooks/: 01_data_exploration.ipynb
projects/Preparing/01198BF2269863CAA6D5444080__stellar-oscillations-as-proxies-for-stellar-age/scripts/: fetch_data.py
projects/Preparing/01198BF226AC9581B451644235__dark-matter-distribution-inferred-from-galactic-ro/: idea.md
projects/Preparing/01198BF226AC9581B451644235__dark-matter-distribution-inferred-from-galactic-ro/notebooks/: 01_data_exploration.ipynb
scripts/: demo_web_ui.py  quick_test.py  test_astroagent.py  test_real_ads.py
tests/: __init__.py  test_agents.py  test_integration.py  test_orchestration.py
web_ui/: README.md  __init__.py  app.py  start_ui.py
web_ui/static/: app.js  index.html  styles.css
(+2 files in other folders)
